# light_novel_translator_iced

./: Cargo.toml  README.md  build.rs  notes.txt
src/: app.rs  error.rs  main.rs  message.rs
src/actions/: consensus_action.rs  doc_action.rs  extraction_action.rs  format_action.rs  mod.rs  server_action.rs  trans_action.rs
src/components/: ghost_button.rs  mod.rs  side_bar.rs
src/controller/: builder.rs  client.rs  doc.rs  error.rs  markdown.rs  mod.rs  parse.rs  prompts.rs  recovery.rs  server.rs  xml.rs  xml_converter.rs
src/controller/builder/: epub.rs  mod.rs  xml.rs
src/model/: consensus.rs  doc.rs  extraction.rs  format.rs  mod.rs  page.rs  server.rs  translation.rs  translator.rs
src/state/: doc_model.rs  format_model.rs  mod.rs  server_state.rs  translation_model.rs  translator.rs
src/view/: consensus_view.rs  context_view.rs  doc_screen.rs  doc_view.rs  extraction_view.rs  format_view.rs  mod.rs  translation_screen.rs  translation_view.rs
src/widget/: mod.rs  page_sidebar.rs  server_widget.rs  side_bar.rs
