[package]
name = "light_novel_translator_iced"
version = "1.0.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
epub = "2.1.5"
epub-builder = "0.8.2"
htmd = "0.5.0"
iced = { version = "0.14.0", features = ["advanced", "debug", "image", "lazy", "markdown", "svg", "tokio"] }
iced_aw = { version = "0.13.1", default-features = false, features = ["context_menu", "typed_input", "menu", "tab_bar", "card", "number_input"] }
log = { version = "0.4.29" }
ollama-rs = { version = "0.3.4", features = ["stream", "tokio", "tokio-stream"] }
pulldown-cmark = "0.13.0"
quick-xml = "0.39.2" 
regex = "1.12.3"
rfd = { version = "0.17.2", features = ["xdg-portal"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "rt-multi-thread", "time", "tokio-macros"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
