[package]
name = "light_novel_translator_iced"
version = "1.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.1"
epub = "2.1.5"
epub-builder = "0.8.3"
fast_html2md = "0.0.62"
iced = { version = "0.14.0", features = ["advanced", "debug", "image", "lazy", "markdown", "svg", "tokio"] }
iced_aw = { version = "0.14.1", default-features = false, features = ["context_menu", "typed_input", "menu", "tab_bar", "card", "number_input"] }
log = { version = "0.4.29" }
phf = { version = "0.13.1", features = ["macros"] }
pulldown-cmark = "0.13.3"
quick-xml = "0.39.2" 
regex = "1.12.3"
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
rfd = { version = "0.17.2", features = ["xdg-portal"] }
rig-core = { version = "0.37.0", features = ["reqwest-middleware"] }
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["fs", "rt-multi-thread", "time", "tokio-macros"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
